--- a/deploy/sass/_slides.scss
+++ b/deploy/sass/_slides.scss
@@ -21,6 +21,7 @@
  * ======================================*/
 
 .impress-enabled .step {
+  
   margin: 0;
   opacity: 1;
 
@@ -42,6 +43,7 @@
 }
 
 .impress-enabled .step.active { 
+  transition: opacity 1s;
   opacity: 1;
   .slideCover {
     opacity: 0;
@@ -53,6 +55,7 @@
 
 /* Make all slides visible on overview */
 .impress-on-overview .step {
+  transition: opacity 1s;
   opacity: 1;
   cursor: pointer;
 }
@@ -66,15 +69,15 @@
 
 .upperLevel {
   .generatedSlide {
-    display: none;
+    opacity: 0;
   }
   .depth0 {
-    display: block;
+    opacity: 1;
   }
 }
 .lowerLevel {
   .generatedSlide {
-    display: block;
+    opacity: 1;
   }
 }
 
